--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shankarblr/astec-react-app.git"
+    "url": "https://github.com/shankarblr/astec-react-app.git"
   },
   "author": "Shankar Subramanyam",
   "license": "MIT"
